@@ -101,8 +101,13 @@ bool ImGuiEx::Canvas::Begin(ImGuiID id, const ImVec2& size)
 
     UpdateViewTransformPosition();
 
+# if IMGUI_VERSION_NUM > 18415
+    if (ImGui::IsClippedEx(m_WidgetRect, id))
+        return false;
+# else
     if (ImGui::IsClippedEx(m_WidgetRect, id, false))
         return false;
+# endif
 
     // Save current channel, so we can assert when user
     // call canvas API with different one.
